fix: spacing

--- a/frontend/components/FieldReference/FieldReference.css
+++ b/frontend/components/FieldReference/FieldReference.css
@@ -40,7 +40,7 @@
 }
 
 .control-button {
-  margin-left: 10px;
+  margin-left: 8px;
 }
 
 .list-head-annotation {
